# ChangeLog for x11-misc/pypanel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/pypanel/ChangeLog,v 1.38 2009/12/27 13:37:28 yngwin Exp $

  27 Dec 2009; Ben de Groot <yngwin@gentoo.org> pypanel-2.4.ebuild:
  Add usedep on imlib2[X] (bug 297796). Some minor cleanups.

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> pypanel-2.4.ebuild:
  Stable on amd64 wrt bug #206723

  17 Jul 2007; Markus Rothe <corsair@gentoo.org> pypanel-2.4.ebuild:
  Added ~ppc64

  02 Mar 2007; Samuli Suominen <drac@gentoo.org> pypanel-2.4.ebuild:
  Kill virtual/x11. Remove trailing emptyline.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  13 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -pypanel-2.3.ebuild:
  Remove old version.

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> pypanel-2.4.ebuild:
  Mark 2.4 stable on alpha

  02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> pypanel-2.4.ebuild:
  Stable on ppc.

  28 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> pypanel-2.4.ebuild:
  Stable on x86.

  28 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> pypanel-2.4.ebuild:
  Fixed DEPEND for modular X. See bug #115991.

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> -pypanel-2.0.ebuild:
  Fixed ChangeLog.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> pypanel-2.3.ebuild:
  Mark 2.3 stable on alpha

*pypanel-2.4 (30 Jun 2005)

  30 Jun 2005; Jonathan Smith <smithj@gentoo.org> +pypanel-2.4.ebuild:
  #97247: version bump

  25 Jun 2005; Jonathan Smith <smithj@gentoo.org> -pypanel-1.3.ebuild:
  ebuild cleanup

  25 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> pypanel-2.3.ebuild:
  Stable on ppc.

  25 Jun 2005; Jonathan Smith <smithj@gentoo.org> pypanel-2.3.ebuild:
  2.3 stable x86

  22 Jun 2005; Jonathan Smith <smithj@gentoo.org> pypanel-2.0.ebuild,
  pypanel-2.3.ebuild:
  2.0 stable x86 and fixed src_uri
