@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/pypanel
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/pypanel/ChangeLog,v 1.38 2009/12/27 13:37:28 yngwin Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/pypanel/ChangeLog,v 1.39 2010/05/28 20:54:49 hwoarang Exp $
+
+*pypanel-2.4-r1 (28 May 2010)
+
+  28 May 2010; Markos Chandras <hwoarang@gentoo.org> +pypanel-2.4-r1.ebuild:
+  Revbump which fixes recent changes on python eclass. Fixes bug #317021
 
   27 Dec 2009; Ben de Groot <yngwin@gentoo.org> pypanel-2.4.ebuild:
   Add usedep on imlib2[X] (bug 297796). Some minor cleanups.
